force-app/main/default/objects/Bolt_Kanban__Settings__mdt/Bolt_Kanban__Settings__mdt.object-meta.xml
<CustomObject>
    <label>Kanban Settings</label>
    <pluralLabel>Kanban Settings</pluralLabel>
</CustomObject>