force-app/main/default/objects/Bolt_Kanban__Settings__mdt/fields/Bolt_Kanban__Object_API__c.field-meta.xml
<CustomField>
    <fullName>Bolt_Kanban__Object_API__c</fullName>
    <label>Object API</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>