force-app/main/default/objects/Bolt_Kanban__Settings__mdt/fields/Bolt_Kanban__Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>Bolt_Kanban__Picklist_Values__c</fullName>
    <label>Picklist Values</label>
    <length>255</length>
    <type>Text</type>
</CustomField>