force-app/main/default/objects/Bolt_Kanban__Settings__mdt/fields/Bolt_Kanban__Revenue_Amount__c.field-meta.xml
<CustomField>
    <fullName>Bolt_Kanban__Revenue_Amount__c</fullName>
    <label>Revenue Amount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>