force-app/main/default/objects/Bolt_Kanban__Settings__mdt/fields/Bolt_Kanban__Summery_Field__c.field-meta.xml
<CustomField>
    <fullName>Bolt_Kanban__Summery_Field__c</fullName>
    <label>Summery Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>