force-app/main/default/objects/Bolt_Kanban__Settings__mdt/fields/Bolt_Kanban__Unique_Kanban_Id__c.field-meta.xml
<CustomField>
    <fullName>Bolt_Kanban__Unique_Kanban_Id__c</fullName>
    <label>Unique Kanban Id</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>